src/app/header/header.component.scss
:host {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 99;
}

nav {
  display: flex;
  flex-direction: column;
  padding: 15px 40px;
  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 10%, transparent);
  transition: all 500ms ease-out;

  a {
    display: flex;
    color: rgb(230, 230, 230);
    text-decoration: none;
    cursor: pointer;
    transition: all 350ms ease-in-out;

    &:hover {
      color: rgb(180, 180, 180);
      transition: all 350ms ease;
    }
  }

  div {
    display: flex;
    gap: 25px;
    align-items: center;
  }

  h2 {
    margin: 0;
  }
}

.scrolled-nav {
  background: black;
  transition: all 300ms ease-out;
}

.active {
  color: white !important;
  font-weight: 500;
}

.nav-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.sub-header {
  font-size: 2.5rem;
  padding: 26px 0;
}

